--- a/.github/workflows/ca.yml
+++ b/.github/workflows/ca.yml
@@ -2,12 +2,12 @@ name: Continuous yyyyy
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '0 */1 * * *'
-    - cron:  '10 */1 * * *'
-    - cron:  '20 */1 * * *'
-    - cron:  '30 */1 * * *'
-    - cron:  '40 */1 * * *'
-    - cron:  '50 */1 * * *'
+    - cron:  '0 * * * *'
+    - cron:  '10 * * * *'
+    - cron:  '20 * * * *'
+    - cron:  '30 * * * *'
+    - cron:  '40 * * * *'
+    - cron:  '50 * * * *'
 
 jobs:
   smoke-tests:
