--- a/.github/workflows/ca.yml
+++ b/.github/workflows/ca.yml
@@ -8,6 +8,12 @@ on:
     - cron:  '30 * * * *'
     - cron:  '40 * * * *'
     - cron:  '50 * * * *'
+    - cron:  '5 * * * *'
+    - cron:  '15 * * * *'
+    - cron:  '25 * * * *'
+    - cron:  '35 * * * *'
+    - cron:  '45 * * * *'
+    - cron:  '55 * * * *'
 
 jobs:
   smoke-tests:
