--- a/.github/workflows/ca.yml
+++ b/.github/workflows/ca.yml
@@ -20,5 +20,11 @@ jobs:
     name: Run smoke tests
     runs-on: ubuntu-latest
     steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST }}
+          aws-region: us-west-2
       - name: yy
-        run : echo "yy"
+        run : aws cloudwatch put-metric-data --metric-name XRayJavaSDKDistributionUnavailability --dimensions failure=rate --namespace MonitorSDK --value 1 --timestamp $(date +%s)
